[project]
name = "criacao_quiz"
version = "0.1.0"
description = "criacao_quiz using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
criacao_quiz = "criacao_quiz.main:run"
run_crew = "criacao_quiz.main:run"
train = "criacao_quiz.main:train"
replay = "criacao_quiz.main:replay"
test = "criacao_quiz.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
